# toy-mls

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: direct-path-copath.md
examples/: dynamic_membership.rs  mls_tour.rs  real_copath_test.rs  tree_math_comparison.rs  tree_operations.rs
src/: crypto.rs  error.rs  group.rs  lib.rs  messages.rs  path_secrets.rs  tree.rs
tests/: apply_commit.rs  integration_tests.rs  security_properties_tests.rs  signature_and_error_tests.rs  wire_format_tests.rs
