[package]
name = "toy-mls"
version = "0.1.0"
edition = "2024"
description = "A simplified, educational implementation of the MLS (Messaging Layer Security) protocol for learning and experimentation"
license = "MIT"
repository = "https://github.com/cspinetta/toy-mls"
keywords = ["mls", "cryptography", "security", "education", "learning", "messaging", "group-chat", "ratchet-tree"]
categories = ["cryptography", "education"]

[dependencies]
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
# Add test dependencies here if needed
